--- a/src/main/java/com/mycompany/obligatorio/Interface/Setup.form
+++ b/src/main/java/com/mycompany/obligatorio/Interface/Setup.form
@@ -36,6 +36,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -63,8 +64,8 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel8" pref="502" max="32767" attributes="0"/>
                           <Component id="jLabel7" min="-2" pref="471" max="-2" attributes="0"/>
-                          <Component id="fieldName2" alignment="1" pref="502" max="32767" attributes="0"/>
-                          <Component id="fieldName3" alignment="0" pref="502" max="32767" attributes="0"/>
+                          <Component id="fieldCantTiempoProcesosEnCpu" alignment="1" pref="502" max="32767" attributes="0"/>
+                          <Component id="fieldCantRAM" alignment="0" pref="502" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
@@ -80,7 +81,7 @@
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="fieldName" pref="502" max="32767" attributes="0"/>
+                          <Component id="fieldCantProcesadores" pref="502" max="32767" attributes="0"/>
                           <Component id="jLabel5" min="-2" pref="264" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -91,7 +92,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="215" max="-2" attributes="0"/>
-                      <Component id="LoadManyProcess" min="-2" pref="108" max="-2" attributes="0"/>
+                      <Component id="buttonEnter" min="-2" pref="108" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="219" max="-2" attributes="0"/>
@@ -110,30 +111,24 @@
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel6" min="-2" pref="53" max="-2" attributes="0"/>
               </Group>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
-                      <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
-                      <Component id="jLabel5" min="-2" pref="31" max="-2" attributes="0"/>
-                  </Group>
-              </Group>
+              <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
+              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="fieldName" min="-2" max="-2" attributes="0"/>
+              <Component id="jLabel5" min="-2" pref="31" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+              <Component id="fieldCantProcesadores" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               <Component id="jLabel7" min="-2" pref="31" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-              <Component id="fieldName2" min="-2" max="-2" attributes="0"/>
+              <Component id="fieldCantTiempoProcesosEnCpu" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jLabel8" min="-2" pref="31" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="fieldName3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="46" max="32767" attributes="0"/>
+              <Component id="fieldCantRAM" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="9" max="32767" attributes="0"/>
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="LoadManyProcess" min="-2" pref="35" max="-2" attributes="0"/>
+              <Component id="buttonEnter" min="-2" pref="35" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -190,7 +185,7 @@
         <Property name="text" type="java.lang.String" value="Cantidad de memoria principal del sistema (RAM)"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="LoadManyProcess">
+    <Component class="javax.swing.JButton" name="buttonEnter">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="40" green="33" red="0" type="rgb"/>
@@ -204,11 +199,11 @@
         <Property name="text" type="java.lang.String" value="Enter"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="LoadManyProcessMouseClicked"/>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LoadManyProcessActionPerformed"/>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="buttonEnterMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonEnterActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="fieldName">
+    <Component class="javax.swing.JTextField" name="fieldCantProcesadores">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="40" green="33" red="0" type="rgb"/>
@@ -228,7 +223,7 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="fieldName2">
+    <Component class="javax.swing.JTextField" name="fieldCantTiempoProcesosEnCpu">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="40" green="33" red="0" type="rgb"/>
@@ -248,7 +243,7 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="fieldName3">
+    <Component class="javax.swing.JTextField" name="fieldCantRAM">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="40" green="33" red="0" type="rgb"/>
