--- a/src/main/java/com/mycompany/obligatorio/Interface/VentanaPrincipal.form
+++ b/src/main/java/com/mycompany/obligatorio/Interface/VentanaPrincipal.form
@@ -68,10 +68,9 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="156" max="-2" attributes="0"/>
+                      <EmptySpace min="156" max="32767" attributes="0"/>
                       <Component id="jLabel3" min="-2" pref="246" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="162" max="-2" attributes="0"/>
@@ -137,6 +136,7 @@
         <Property name="text" type="java.lang.String" value="Return Setup"/>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="ReturnSetupMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ReturnSetupActionPerformed"/>
       </Events>
     </Component>
@@ -309,7 +309,6 @@
             </LineBorder>
           </Border>
         </Property>
-        <Property name="opaque" type="boolean" value="true"/>
         <Property name="stringPainted" type="boolean" value="true"/>
       </Properties>
     </Component>
