--- a/src/main/java/com/mycompany/obligatorio/Interface/LoadManyProcess.form
+++ b/src/main/java/com/mycompany/obligatorio/Interface/LoadManyProcess.form
@@ -15,6 +15,7 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="47" green="3f" red="37" type="rgb"/>
     </Property>
+    <Property name="undecorated" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
